--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,6 +33,7 @@ android {
         jvmTarget = '1.8'
     }
 
+
     buildFeatures {
         dataBinding true
         viewBinding true
@@ -56,4 +59,6 @@ dependencies {
     implementation 'io.coil-kt:coil:2.2.2'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    kapt 'com.android.databinding:compiler:3.5.3'
 }
