--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     kapt 'com.android.databinding:compiler:3.5.3'
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
 }
